--- a/templates/BRMapp/search_book.html
+++ b/templates/BRMapp/search_book.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Search Book Record</title>
-    <link rel="stylesheet" href="{%static 'css/BRMstyle.css'  %}">
+    <link rel="stylesheet" href="{% static 'css/BRMstyle.css'  %}">
   </head>
   <body>
     <div id="header">
@@ -17,32 +17,35 @@
       </div>
     </div>
 
-      <div id="main">
-          <h2>Search Book Record</h2>
-          <form class="#" action="BRMapp/search" method="post">
-            {% csrf_token %}
-            {{form}}
-            <input type="submit" name="" value="Search">
-          </form>
+    <div id="main">
+      <h2>Search Book Record</h2>
+      <form class="#" action="" method="post">
+        {% csrf_token %}
+        {{form}}
+        <input type="submit" value="Search">
+      </form>
 
-          {% if books %}
-          <table>
-            <thead>
-              <th>Book Title</th>
-              <th>Price</th>
-              <th>Author</th>
-              <th>Publisher</th>
-            </thead>
-          {% endif %}
-          {% for book in books %}
-            <tr>
-              <td>{{book.title}}</td>
-              <td>{{book.price}}</td>
-              <td>{{book.author}}</td>
-              <td>{{book.publisher}}</td>
-            </tr>
-            {% endfor %}
-          </table>
-      </div>
+      {% if books %}
+      <table>
+        <thead>
+          <th>Book Title</th>
+          <th>Price</th>
+          <th>Author</th>
+          <th>Publisher</th>
+        </thead>
+      </table>
+      {% endif %}
+
+      <table>
+        {% for book in books %}
+        <tr>
+          <td>{{ book.title }}</td>
+          <td>{{ book.price }}</td>
+          <td>{{ book.author }}</td>
+          <td>{{ book.publisher }}</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
   </body>
 </html>
